@@ -1144,6 +1144,7 @@ NTSTATUS	NTAPI	NtClose(HANDLE);
 NTSTATUS	NTAPI	NtCreateEvent(PHANDLE,ACCESS_MASK,const OBJECT_ATTRIBUTES *,SIZE_T,SIZE_T);
 NTSTATUS	NTAPI	NtCreateFile(PHANDLE,ACCESS_MASK,POBJECT_ATTRIBUTES,PIO_STATUS_BLOCK,PLARGE_INTEGER,SIZE_T,SIZE_T,SIZE_T,SIZE_T,PVOID,SIZE_T);
 NTSTATUS	NTAPI	NtCreateKey(PHANDLE,ACCESS_MASK,POBJECT_ATTRIBUTES,SIZE_T,PUNICODE_STRING,SIZE_T,PULONG);
+NTSTATUS	NTAPI	NtCreateMutant(PHANDLE,ACCESS_MASK,POBJECT_ATTRIBUTES,SIZE_T);
 NTSTATUS	NTAPI	NtDeleteFile(POBJECT_ATTRIBUTES);
 NTSTATUS	NTAPI	NtDelayExecution(SIZE_T,const LARGE_INTEGER*);
 NTSTATUS	NTAPI	NtDeviceIoControlFile(HANDLE,HANDLE,PIO_APC_ROUTINE,PVOID,PIO_STATUS_BLOCK,SIZE_T,PVOID,SIZE_T,PVOID,SIZE_T);
@@ -1157,6 +1158,7 @@ NTSTATUS	NTAPI	NtLoadDriver(PUNICODE_STRING);
 NTSTATUS	NTAPI	NtMapViewOfSection(HANDLE,HANDLE,PVOID*,SIZE_T,SIZE_T,const LARGE_INTEGER*,SIZE_T*,SECTION_INHERIT,SIZE_T,SIZE_T);
 NTSTATUS	NTAPI	NtOpenEvent(PHANDLE,ACCESS_MASK,const OBJECT_ATTRIBUTES *);
 NTSTATUS	NTAPI	NtOpenKey(PHANDLE,ACCESS_MASK,POBJECT_ATTRIBUTES);
+NTSTATUS	NTAPI	NtOpenMutant(PHANDLE,ACCESS_MASK,POBJECT_ATTRIBUTES);
 NTSTATUS	NTAPI	NtOpenProcessToken(HANDLE,ACCESS_MASK,PHANDLE);
 NTSTATUS	NTAPI	NtOpenSection(HANDLE*,ACCESS_MASK,const OBJECT_ATTRIBUTES*);
 NTSTATUS	NTAPI	NtOpenSymbolicLinkObject(PHANDLE,ACCESS_MASK,POBJECT_ATTRIBUTES);
@@ -1169,6 +1171,7 @@ NTSTATUS	NTAPI	NtQuerySystemTime(PLARGE_INTEGER SystemTime);
 NTSTATUS	NTAPI	NtQueryValueKey(HANDLE,PUNICODE_STRING,KEY_VALUE_INFORMATION_CLASS,PVOID,SIZE_T,PULONG);
 NTSTATUS	NTAPI	NtQueryVolumeInformationFile(HANDLE,PIO_STATUS_BLOCK,PVOID,SIZE_T,FS_INFORMATION_CLASS);
 NTSTATUS	NTAPI	NtReadFile(HANDLE,HANDLE,PIO_APC_ROUTINE,PVOID,PIO_STATUS_BLOCK,PVOID,SIZE_T,PLARGE_INTEGER,PULONG);
+NTSTATUS	NTAPI	NtReleaseMutant(PHANDLE,SIZE_T *);
 NTSTATUS	NTAPI	NtSetEvent(HANDLE,PULONG);
 NTSTATUS	NTAPI	NtSetInformationProcess(HANDLE,PROCESS_INFORMATION_CLASS,PVOID,SIZE_T);
 NTSTATUS	NTAPI	NtSetSystemPowerState(POWER_ACTION SystemAction,SYSTEM_POWER_STATE MinSystemState,SIZE_T Flags);
